update swagger, video validation and video endpoint
